app1/ms4-canary/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app1-ms4-canary
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: app1-ms4-canary
  template:
    metadata:
      labels:
        app: app1-ms4-canary
    spec:
      containers:
      - name: app1-ms4-canary
        image: yeasy/simple-web
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 128Mi
            cpu: 150m
  strategy:
    canary:
#      maxSurge: "25%"
      canaryService: app1-ms4-canary-preview
      steps:
      - setWeight: 10
      - pause: { duration: 40 }
