app1/ms4-canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-ms4-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app1-ms4-canary
