app1/ms4-canary/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ms4-canary
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app4/preview
        pathType: Prefix
        backend:
          service:
            name: app1-ms4-canary-preview
            port:
              number: 80
    host: k8s-ingressn-ingressn-f56e1aaa50-c3c50fce09f56240.elb.eu-west-2.amazonaws.com
